fix(style): update overflow

--- a/static/js/page/index/index.scss
+++ b/static/js/page/index/index.scss
@@ -335,7 +335,7 @@
   }
 
   .CodeMirror {
-    overflow: auto;
+    overflow-y: auto;
     height: 400px;
     border-bottom: 1px solid grey;
   }
